--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -1,4 +1,9 @@
 :root {
     --welcome-card-bg: white;
     --welcome-text: white;
+    --z-index-bottom-nav: 1;
+    --welcome-bg-start: #8a4b45;
+    --welcome-bg-end: #bb8189;
+    --welcome-nav-height: 64px;
+    --welcome-nav-gap: 8px;
 }
