--- a/src/components/welcome/First.module.scss
+++ b/src/components/welcome/First.module.scss
@@ -2,6 +2,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    padding-bottom: var(--z-index-bottom-nav);
     > .card {
         flex-grow: 1;
         background: var(--welcome-card-bg);
@@ -19,13 +20,20 @@
     }
 
     > .action {
+        width: 100%;
+        height: var(--welcome-nav-height);
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: var(--z-index-bottom-nav);
+        background: var(--welcome-bg-end);  
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 16px;
-        font-size: 32px;
+        font-size: 24px;
         color: var(--welcome-text);
-        padding: 24px 0;
+        padding: 0 16px;
+        padding-bottom: var(--z-index-bottom-nav);
 
         > .fake {
             visibility: hidden;
