完成导航页面

--- a/src/components/welcome/First.module.scss
+++ b/src/components/welcome/First.module.scss
@@ -17,6 +17,9 @@
         > h2 {
             margin-top: 40px;
         }
+        > img {
+            width: 128px;
+        }
     }
 
     > .action {
@@ -44,7 +47,4 @@
         }
 
     }
-}
-.spring {
-    width: 128px;
 }
