--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -2,9 +2,8 @@
   height: calc(100vh - var(--welcome-nav-height));
   display: flex;
   flex-direction: column;
-  margin-bottom: var(--welcome-nav-height);
   background-image: linear-gradient(to bottom, var(--welcome-bg-start) 0%, var(--welcome-bg-end) 100%);
-  overflow: scroll;
+  margin-bottom: var(--welcome-nav-height);
   > header{
     flex-shrink: 0;
     display: flex;
@@ -13,7 +12,7 @@
     justify-content: center;
     padding-top: 66px;
     color: #d4d4ee;
-    > .dragonFriut {
+    > img {
       width: 96px;
     }
   }
@@ -21,9 +20,25 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    position: relative;
+    margin: 16px 16px var(--welcome-nav-gap);
   }
 
   > footer{
     flex-shrink: 0;
   }
+}
+.slide_fade_enter_active, .slide_fade_leave_active {
+  position: absolute;
+  left: 0; 
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: all .3s ease-out;
+}
+.slide_fade_enter_from {
+  transform: translateX(100vw);
+}
+.slide_fade_leave_to {
+  transform: translateX(-100vw);
 }
