使用插件优化 svg

--- a/src/components/welcome/Welcome.module.scss
+++ b/src/components/welcome/Welcome.module.scss
@@ -11,9 +11,10 @@
 
     >h2 {
         margin-top: 40px;
+        font-size: 18px;
     }
 
-    >img {
+    >svg {
         width: 128px;
     }
 }
