--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -1,10 +1,11 @@
-.wrapper{
+.wrapper {
   height: calc(100vh - var(--welcome-nav-height));
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(to bottom, var(--welcome-bg-start) 0%, var(--welcome-bg-end) 100%);
   margin-bottom: var(--welcome-nav-height);
-  > header{
+
+  >header {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
@@ -12,11 +13,13 @@
     justify-content: center;
     padding-top: 66px;
     color: #d4d4ee;
-    > img {
+
+    >svg {
       width: 96px;
     }
   }
-  > main{
+
+  >main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -24,21 +27,25 @@
     margin: 16px 16px var(--welcome-nav-gap);
   }
 
-  > footer{
+  >footer {
     flex-shrink: 0;
   }
 }
-.slide_fade_enter_active, .slide_fade_leave_active {
+
+.slide_fade_enter_active,
+.slide_fade_leave_active {
   position: absolute;
-  left: 0; 
+  left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   transition: all .3s ease-out;
 }
+
 .slide_fade_enter_from {
   transform: translateX(100vw);
 }
+
 .slide_fade_leave_to {
   transform: translateX(-100vw);
 }
