--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -39,7 +39,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  transition: all .3s ease-out;
+  transition: all var(--transition-duration) ease-out;
 }
 
 .slide_fade_enter_from {
