--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -2,9 +2,14 @@
     --welcome-card-bg: white;
     --welcome-text: white;
     --z-index-bottom-nav: 1;
-    --welcome-bg-start: #8a4b45;
-    --welcome-bg-end: #bb8189;
+    --welcome-bg-start: #4C48D9;
+    --welcome-bg-end: #5A86BF;
     --welcome-nav-height: 64px;
     --welcome-nav-gap: 8px;
     --transition-duration: 0.3s;
+    --button-bg: #5061BF;
+    --button-text-color: white;
+    --button-text-font-size: 18px;
+    --button-radius: 8px;
+    --button-height: 48px;
 }
