--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -12,4 +12,6 @@
     --button-text-font-size: 18px;
     --button-radius: 8px;
     --button-height: 48px;
+    --float-button-text-color: #fff;
+    --float-button-bg-color: var(--button-bg);
 }
