--- a/src/views/StartPage.module.scss
+++ b/src/views/StartPage.module.scss
@@ -5,3 +5,11 @@
         padding: 16px;
     }
 }
+.dragon_fruit {
+    width: 128px;
+    height: 128px;
+
+    &_wrapper {
+        padding: 168px 0;
+    }
+}
