--- a/src/views/StartPage.module.scss
+++ b/src/views/StartPage.module.scss
@@ -10,6 +10,12 @@
     height: 128px;
 
     &_wrapper {
-        padding: 168px 0;
+        padding: 120px 0;
     }
+}
+.nav_icon {
+    width: 36px;
+    height: 36px;
+    position: relative;
+    top: 2px;
 }
