--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -14,4 +14,7 @@
     --button-height: 48px;
     --float-button-text-color: #fff;
     --float-button-bg-color: var(--button-bg);
+    --navbar-bg-start: var(--welcome-bg-start);
+    --navbar-bg-end: var(--welcome-bg-end);
+    --navbar-text-color: #fff;
 }
