--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -1,7 +1,8 @@
 :root {
     --welcome-card-bg: white;
     --welcome-text: white;
-    --z-index-bottom-nav: 1;
+    --z-index-bottom-nav: 8;
+    --z-index-overlay: 16;
     --welcome-bg-start: #4C48D9;
     --welcome-bg-end: #5A86BF;
     --welcome-nav-height: 64px;
@@ -17,4 +18,7 @@
     --navbar-bg-start: var(--welcome-bg-start);
     --navbar-bg-end: var(--welcome-bg-end);
     --navbar-text-color: #fff;
+    --overlay-mask-bg: rgba(0, 0, 0, 0.5);
+    --overlay-bg: white;
+    --top-safe-area-height: 24px;
 }
