--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -20,5 +20,7 @@
     --navbar-text-color: #fff;
     --overlay-mask-bg: rgba(0, 0, 0, 0.5);
     --overlay-bg: white;
+    --overlay-user-bg: var(--welcome-bg-start);
+    --overlay-user-text-color: white;
     --top-safe-area-height: 24px;
 }
