--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -16,3 +16,33 @@
   width: 16em;
   height: calc(100% - var(--top-safe-area-height));
 }
+.current_user {
+  padding: 32px 16px;
+  background: var(--overlay-user-bg);
+  color: var(--overlay-user-text-color);
+}
+.action {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 12px 16px;
+  &_list {
+    padding-top: 16px;
+    font-size: 20px;
+  }
+
+  >.icon {
+    margin-right: 12px;
+
+
+  }
+}
+.icon_statistics {
+  fill: #26161C;
+}
+.icon_export {
+  fill: #255459;
+}
+.icon_notify {
+  fill: #428C85;
+}
