修改 button hover 样式

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -11,6 +11,7 @@
     --button-bg: #5061BF;
     --button-text-color: white;
     --button-text-font-size: 18px;
+    --button-hover-shadow-color: var(--welcome-bg-start);
     --button-radius: 8px;
     --button-height: 48px;
     --float-button-text-color: #fff;
