--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -24,4 +24,7 @@
     --overlay-user-bg: var(--welcome-bg-start);
     --overlay-user-text-color: white;
     --top-safe-area-height: 24px;
+    --tabs-bg: var(--navbar-bg-end);
+    --tabs-text-color: white;
+    --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
 }
