--- a/src/shared/Tabs.module.scss
+++ b/src/shared/Tabs.module.scss
@@ -1,9 +1,27 @@
 .tabs {
   &_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: var(--tabs-bg);
+
     > li {
+      flex-grow: 1;
+      flex-shrink: 0;
+      padding: 12px 0;
+      color: var(--tabs-text-color);
       &.selected {
-        background: red;
-        color: white;
+        position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 4px;
+          background: var(--tabs-indicator-bg);
+        }
       }
     }
   }
