完成 inputpad 数字按键

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -27,4 +27,5 @@
     --tabs-bg: var(--navbar-bg-end);
     --tabs-text-color: white;
     --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
+    --input-pad-button-border-color: #ddd;
 }
