--- a/src/components/item/ItemCreate.module.scss
+++ b/src/components/item/ItemCreate.module.scss
@@ -1,9 +1,14 @@
-.item-create {
-}
 
 .nav_icon {
   width: 24px;
   height: 24px;
   position: relative;
   top: 2px;
+}
+
+.inputPad_wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
