完成 date & amount 的样式

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -9,23 +9,26 @@
     --welcome-nav-gap: 8px;
     --transition-duration: 0.3s;
     --button-bg: #5061BF;
-    --button-text-color: white;
+    --button-text: white;
     --button-text-font-size: 18px;
     --button-hover-shadow-color: var(--welcome-bg-start);
     --button-radius: 8px;
     --button-height: 48px;
-    --float-button-text-color: #fff;
+    --float-button-text: #fff;
     --float-button-bg-color: var(--button-bg);
     --navbar-bg-start: var(--welcome-bg-start);
     --navbar-bg-end: var(--welcome-bg-end);
-    --navbar-text-color: #fff;
+    --navbar-text: #fff;
     --overlay-mask-bg: rgba(0, 0, 0, 0.5);
     --overlay-bg: white;
     --overlay-user-bg: var(--welcome-bg-start);
-    --overlay-user-text-color: white;
+    --overlay-user-text: white;
     --top-safe-area-height: 24px;
     --tabs-bg: var(--navbar-bg-end);
-    --tabs-text-color: white;
+    --tabs-text: white;
     --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
     --input-pad-button-border-color: #ddd;
+    --input-pad-date-icon-fill: #4c48d9;
+    --input-pad-date-text: #999;
+    --input-pad-amount-text: #4c48d9;
 }
