--- a/src/shared/FloatButton.module.scss
+++ b/src/shared/FloatButton.module.scss
@@ -14,6 +14,6 @@
     .icon {
         width: 24px;
         height: 24px;
-        fill: var(--float-button-text-color);
+        fill: var(--float-button-text);
     }
 }
