--- a/src/shared/Navbar.module.scss
+++ b/src/shared/Navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
   background: linear-gradient(to bottom, var(--navbar-bg-start), var(--navbar-bg-end));
-  color: var(--navbar-text-color);
-  fill: var(--navbar-text-color);
+  color: var(--navbar-text);
+  fill: var(--navbar-text);
   display: flex;
   justify-content: flex-start;
   align-items: center;
