--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -19,7 +19,7 @@
 .current_user {
   padding: 32px 16px;
   background: var(--overlay-user-bg);
-  color: var(--overlay-user-text-color);
+  color: var(--overlay-user-text);
 }
 .action {
   display: flex;
