--- a/src/shared/Tabs.module.scss
+++ b/src/shared/Tabs.module.scss
@@ -10,7 +10,7 @@
       flex-grow: 1;
       flex-shrink: 0;
       padding: 12px 0;
-      color: var(--tabs-text-color);
+      color: var(--tabs-text);
       &.selected {
         position: relative;
         &::after {
