--- a/src/shared/Button.module.scss
+++ b/src/shared/Button.module.scss
@@ -2,7 +2,7 @@
     border: 1px solid var(--button-bg);
     padding: 8px 16px;
     background: var(--button-bg);
-    color: var(--button-text-color);
+    color: var(--button-text);
     font-size: var(--button-text-font-size);
     border-radius: var(--button-radius);
     height: var(--button-height);
