tags create 初步完成样式

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -34,4 +34,11 @@
     --input-pad-button-bg: #fff;
     --input-pad-importnt-button-text: #fff;
     --input-pad-important-button-bg: var(--button-bg);
+    --error-color: #e10505;
+    --input-border-color: #5c33be;
+    --input-min-height: 48px;
+    --input-radius: var(--button-radius);
+    --input-shadow: rgba(0, 0, 0, 0.25);
+    --emoji-nav-text: #999;
+    --emoji-nav-text-selected: #333;
 }
