--- a/src/shared/EmojiSelect.module.scss
+++ b/src/shared/EmojiSelect.module.scss
@@ -27,6 +27,7 @@
       cursor: pointer;
 
       &.selected {
+        font-weight: bold;
         color: var(--emoji-nav-text-selected);
       }
     }
@@ -40,6 +41,7 @@
     line-height: 32px;
     height: calc(32px * 12);
     overflow: auto;
+    padding: 1px 4px;
 
     &::-webkit-scrollbar {
       display: none;
@@ -50,6 +52,10 @@
       flex-grow: 0;
       width: 10%;
       text-align: center;
+      &.selectedEmoji {
+        outline: 1px solid var(--button-bg);
+        border-radius: var(--input-radius);
+      }
     }
   }
 }
