feat: Button 新增 level 属性

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -1,5 +1,6 @@
 :root {
     --button-bg: #5061BF;
+    --button-bg-danger: #e10505;
     --button-height: 48px;
     --button-hover-shadow-color: var(--welcome-bg-start);
     --button-radius: 8px;
