--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,19 @@ body {
   font-size: 16px;
   color: #333;
 }
+
+::-webkit-scrollbar {
+  visibility: hidden;
+}
+
+.customerTags_tabs {
+  & > &_nav {
+    justify-content: flex-start;
+  }
+  &_nav {
+    & > &_item {
+      flex-grow: 0;
+      padding: 16px;
+    }
+  }
+}
