--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -1,11 +1,12 @@
 :root {
-    --button-bg: #5061BF;
     --button-bg-danger: #e10505;
+    --button-bg: #5061BF;
     --button-height: 48px;
     --button-hover-shadow-color: var(--welcome-bg-start);
     --button-radius: 8px;
     --button-text-font-size: 18px;
     --button-text: white;
+    --date-text: #999;
     --emoji-nav-text-selected: #333;
     --emoji-nav-text: #999;
     --error-color: #e10505;
@@ -17,11 +18,14 @@
     --input-pad-button-bg: #fff;
     --input-pad-button-border-color: #ddd;
     --input-pad-date-icon-fill: #4c48d9;
-    --input-pad-date-text: #999;
     --input-pad-important-button-bg: var(--button-bg);
     --input-pad-importnt-button-text: #fff;
     --input-radius: var(--button-radius);
     --input-shadow: rgba(0, 0, 0, 0.25);
+    --list-amount-text: var(--list-tag-text);
+    --list-tag-text: #333;
+    --list-time-text: var(--date-text);
+    --main: #5c33be;
     --navbar-bg-end: var(--welcome-bg-end);
     --navbar-bg-start: var(--welcome-bg-start);
     --navbar-text: #fff;
@@ -32,7 +36,12 @@
     --tabs-bg: var(--navbar-bg-end);
     --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
     --tabs-text: white;
+    --tag-bg: #efefef;
     --top-safe-area-height: 24px;
+    --total-bg: #252a43;
+    --total-expense: #5ca867;
+    --total-income: #fe7275;
+    --total-text: white;
     --transition-duration: 0.3s;
     --welcome-bg-end: #5A86BF;
     --welcome-bg-start: #4C48D9;
@@ -42,6 +51,4 @@
     --welcome-text: white;
     --z-index-bottom-nav: 8;
     --z-index-overlay: 16;
-    --main: #5c33be;
-    --tag-bg: #efefef;
 }
