--- a/src/components/InputPad.module.scss
+++ b/src/components/InputPad.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
-    color: var(--input-pad-date-text);
+    color: var(--date-text);
 
     .icon {
       width: 24px;
