--- a/src/components/items/ItemsList.module.scss
+++ b/src/components/items/ItemsList.module.scss
@@ -1,1 +1,12 @@
-.item_list {}
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  background: var(--overlay-mask-bg);
+
+  &_inner {
+    background: var(--bg);
+    width: 80%;
+  }
+}
