基本完成自定义时间弹出框

--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -8,6 +8,7 @@
     --button-text-font-size: 18px;
     --button-text: white;
     --date-text: #999;
+    --dialog-header-text: #fff;
     --emoji-nav-text-selected: #333;
     --emoji-nav-text: #999;
     --error-color: #e10505;
