--- a/src/components/items/ItemsList.module.scss
+++ b/src/components/items/ItemsList.module.scss
@@ -7,6 +7,26 @@
 
   &_inner {
     background: var(--bg);
-    width: 80%;
+    width: 80vw;
+
+    > header {
+      background: var(--main);
+      padding: 12px 16px;
+      color: var(--dialog-header-text);
+    }
+
+    > main {}
+  }
+}
+.actions {
+  text-align: right;
+  button {
+    border: none;
+    background: transparent;
+    padding: 8px 16px;
+
+    & + & {
+      margin-left: 16px;
+    }
   }
 }
