--- a/src/assets/stylesheets/var.scss
+++ b/src/assets/stylesheets/var.scss
@@ -1,58 +1,59 @@
 :root {
-    --bg: white;
-    --button-bg-danger: #e10505;
-    --button-bg: #5061BF;
-    --button-height: 48px;
-    --button-hover-shadow-color: var(--welcome-bg-start);
-    --button-radius: 8px;
-    --button-text-font-size: 18px;
-    --button-text: white;
-    --date-text: #999;
-    --dialog-header-text: #fff;
-    --emoji-nav-text-selected: #333;
-    --emoji-nav-text: #999;
-    --error-color: #e10505;
-    --float-button-bg-color: var(--button-bg);
-    --float-button-text: #fff;
-    --input-border-color: #5c33be;
-    --input-min-height: 48px;
-    --input-pad-amount-text: #4c48d9;
-    --input-pad-button-bg: #fff;
-    --input-pad-button-border-color: #ddd;
-    --input-pad-date-icon-fill: #4c48d9;
-    --input-pad-important-button-bg: var(--button-bg);
-    --input-pad-importnt-button-text: #fff;
-    --input-radius: var(--button-radius);
-    --input-shadow: rgba(0, 0, 0, 0.25);
-    --list-amount-text: var(--list-tag-text);
-    --list-tag-text: #333;
-    --list-time-text: var(--date-text);
-    --main: #5c33be;
-    --navbar-bg-end: var(--welcome-bg-end);
-    --navbar-bg-start: var(--welcome-bg-start);
-    --navbar-text: #fff;
-    --overlay-bg: white;
-    --overlay-mask-bg: rgba(0, 0, 0, 0.5);
-    --overlay-user-bg: var(--welcome-bg-start);
-    --overlay-user-text: white;
-    --text: #333;
-    --tabs-bg: var(--navbar-bg-end);
-    --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
-    --tabs-text: white;
-    --tag-bg: #efefef;
-    --top-safe-area-height: 24px;
-    --total-bg: #252a43;
-    --total-expense: #5ca867;
-    --total-income: #fe7275;
-    --total-text: white;
-    --transition-duration: 0.3s;
-    --welcome-bg-end: #5A86BF;
-    --welcome-bg-start: #4C48D9;
-    --welcome-card-bg: white;
-    --welcome-nav-gap: 8px;
-    --welcome-nav-height: 64px;
-    --welcome-text: white;
-    --z-index-bottom-nav: 8;
-    --z-index-overlay: 16;
-    --z-index-navbar: 32;
+  --bg: white;
+  --button-bg-danger: #e10505;
+  --button-bg: #5061BF;
+  --button-height: 48px;
+  --button-hover-shadow-color: var(--welcome-bg-start);
+  --button-radius: 8px;
+  --button-text-font-size: 18px;
+  --button-text: white;
+  --date-text: #999;
+  --dialog-header-text: #fff;
+  --emoji-nav-text-selected: #333;
+  --emoji-nav-text: #999;
+  --error-color: #e10505;
+  --float-button-bg-color: var(--button-bg);
+  --float-button-text: #fff;
+  --input-border-color: #5c33be;
+  --input-min-height: 48px;
+  --input-pad-amount-text: #4c48d9;
+  --input-pad-button-bg: #fff;
+  --input-pad-button-border-color: #ddd;
+  --input-pad-date-icon-fill: #4c48d9;
+  --input-pad-important-button-bg: var(--button-bg);
+  --input-pad-importnt-button-text: #fff;
+  --input-radius: var(--button-radius);
+  --input-shadow: rgba(0, 0, 0, 0.25);
+  --list-amount-text: var(--list-tag-text);
+  --list-tag-text: #333;
+  --list-time-text: var(--date-text);
+  --main: #5c33be;
+  --navbar-bg-end: var(--welcome-bg-end);
+  --navbar-bg-start: var(--welcome-bg-start);
+  --navbar-text: #fff;
+  --overlay-bg: white;
+  --overlay-mask-bg: rgba(0, 0, 0, 0.5);
+  --overlay-user-bg: var(--welcome-bg-start);
+  --overlay-user-text: white;
+  --tabs-bg: var(--navbar-bg-end);
+  --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
+  --tabs-text: white;
+  --tag-bg: #efefef;
+  --text: #333;
+  --top-safe-area-height: 24px;
+  --total-bg: #252a43;
+  --total-expense: #5ca867;
+  --total-income: #fe7275;
+  --total-text: white;
+  --transition-duration: 0.3s;
+  --welcome-bg-end: #5A86BF;
+  --welcome-bg-start: #4C48D9;
+  --welcome-card-bg: white;
+  --welcome-nav-gap: 8px;
+  --welcome-nav-height: 64px;
+  --welcome-text: white;
+  --z-index-bottom-nav: 8;
+  --z-index-navbar: 32;
+  --z-index-overlay: 16;
+  --z-index-item-list-overlay: 64;
 }
