--- a/src/components/items/ItemsList.module.scss
+++ b/src/components/items/ItemsList.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
   background: var(--overlay-mask-bg);
+  z-index: var(--z-index-item-list-overlay);
 
   &_inner {
     background: var(--bg);
