--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -33,6 +33,15 @@
 
   }
 
+  &.validationCodeInput {
+    flex-grow: 0;
+    width: 8em;
+  }
+
+  &.validationCodeButton {
+    margin-left: 16px;
+  }
+
   &_name {
   }
 
